--- a/添加价格指数.html
+++ b/添加价格指数.html
@@ -49,18 +49,10 @@
     <div id="base" class="">
 
       <!-- Unnamed (矩形) -->
-      <div id="u1014" class="ax_default _默认样式">
-        <div id="u1014_div" class=""></div>
-        <div id="u1014_text" class="text " style="display:none; visibility: hidden">
-          <p></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (矩形) -->
       <div id="u1015" class="ax_default _默认样式">
         <div id="u1015_div" class=""></div>
-        <div id="u1015_text" class="text ">
-          <p><span>添加行情</span></p>
+        <div id="u1015_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
@@ -68,7 +60,7 @@
       <div id="u1016" class="ax_default _默认样式">
         <div id="u1016_div" class=""></div>
         <div id="u1016_text" class="text ">
-          <p><span style="color:#FF3B30;">*</span><span style="color:#666666;"> </span><span style="color:#999999;">为必填项</span></p>
+          <p><span style="text-decoration:none;">添加行情</span></p>
         </div>
       </div>
 
@@ -76,123 +68,131 @@
       <div id="u1017" class="ax_default _默认样式">
         <div id="u1017_div" class=""></div>
         <div id="u1017_text" class="text ">
-          <p><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC', sans-serif;font-weight:650;color:#409EFF;">▋</span><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial', sans-serif;font-weight:700;color:#666666;"> 价格指数</span></p>
+          <p><span style="text-decoration:none;color:#FF3B30;">*</span><span style="text-decoration:none;color:#666666;"> </span><span style="text-decoration:none;color:#999999;">为必填项</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1018" class="ax_default label">
+      <div id="u1018" class="ax_default _默认样式">
         <div id="u1018_div" class=""></div>
         <div id="u1018_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'ArialMT', 'Arial', sans-serif;font-size:14px;">日期：</span></p>
+          <p><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';font-weight:650;text-decoration:none;color:#409EFF;">▋</span><span style="font-family:'Arial Negreta', 'Arial Normal', 'Arial';font-weight:700;text-decoration:none;color:#666666;"> 价格指数</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (下拉列表) -->
-      <div id="u1019" class="ax_default droplist">
+      <!-- Unnamed (矩形) -->
+      <div id="u1019" class="ax_default label">
         <div id="u1019_div" class=""></div>
-        <select id="u1019_input" class="u1019_input">
-          <option class="u1019_input_option" value="选择日期">选择日期</option>
-        </select>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1020" class="ax_default label">
-        <div id="u1020_div" class=""></div>
-        <div id="u1020_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;font-size:14px;">品名：</span></p>
+        <div id="u1019_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'Arial Normal', 'Arial';font-size:14px;text-decoration:none;">日期：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (下拉列表) -->
-      <div id="u1021" class="ax_default droplist">
-        <div id="u1021_div" class=""></div>
-        <select id="u1021_input" class="u1021_input">
-          <option class="u1021_input_option" value="选择品名">选择品名</option>
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u1020" class="ax_default droplist">
+        <div id="u1020_div" class=""></div>
+        <select id="u1020_input" class="u1020_input">
+          <option class="u1020_input_option" value="选择日期">选择日期</option>
         </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1022" class="ax_default label">
+      <div id="u1021" class="ax_default label">
+        <div id="u1021_div" class=""></div>
+        <div id="u1021_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';font-size:14px;text-decoration:none;">品名：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u1022" class="ax_default droplist">
         <div id="u1022_div" class=""></div>
-        <div id="u1022_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'ArialMT', 'Arial', sans-serif;font-size:14px;">指数：</span></p>
+        <select id="u1022_input" class="u1022_input">
+          <option class="u1022_input_option" value="选择品名">选择品名</option>
+        </select>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1023" class="ax_default label">
+        <div id="u1023_div" class=""></div>
+        <div id="u1023_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'Arial Normal', 'Arial';font-size:14px;text-decoration:none;">指数：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1023" class="ax_default text_field">
-        <div id="u1023_div" class=""></div>
-        <input id="u1023_input" type="text" value="请输入" class="u1023_input"/>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1024" class="ax_default label">
+      <div id="u1024" class="ax_default text_field">
         <div id="u1024_div" class=""></div>
-        <div id="u1024_text" class="text ">
-          <p><span>继续添加</span></p>
-        </div>
+        <input id="u1024_input" type="text" value="请输入" class="u1024_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
       <div id="u1025" class="ax_default label">
         <div id="u1025_div" class=""></div>
         <div id="u1025_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'ArialMT', 'Arial', sans-serif;font-size:14px;">日期：</span></p>
+          <p><span style="text-decoration:none;">继续添加</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (下拉列表) -->
-      <div id="u1026" class="ax_default droplist">
+      <!-- Unnamed (矩形) -->
+      <div id="u1026" class="ax_default label">
         <div id="u1026_div" class=""></div>
-        <select id="u1026_input" class="u1026_input">
-          <option class="u1026_input_option" value="2023-2-24">2023-2-24</option>
-        </select>
-      </div>
-
-      <!-- Unnamed (矩形) -->
-      <div id="u1027" class="ax_default label">
-        <div id="u1027_div" class=""></div>
-        <div id="u1027_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;font-size:14px;">品名：</span></p>
+        <div id="u1026_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'Arial Normal', 'Arial';font-size:14px;text-decoration:none;">日期：</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (下拉列表) -->
-      <div id="u1028" class="ax_default droplist">
-        <div id="u1028_div" class=""></div>
-        <select id="u1028_input" class="u1028_input">
-          <option class="u1028_input_option" value="香菇">香菇</option>
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u1027" class="ax_default droplist">
+        <div id="u1027_div" class=""></div>
+        <select id="u1027_input" class="u1027_input">
+          <option class="u1027_input_option" value="2023-2-24">2023-2-24</option>
         </select>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1029" class="ax_default label">
+      <div id="u1028" class="ax_default label">
+        <div id="u1028_div" class=""></div>
+        <div id="u1028_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';font-size:14px;text-decoration:none;">品名：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (下拉列表框) -->
+      <div id="u1029" class="ax_default droplist">
         <div id="u1029_div" class=""></div>
-        <div id="u1029_text" class="text ">
-          <p style="font-size:13px;"><span style="font-family:'Helvetica', sans-serif;color:#FF3B30;">*</span><span style="font-family:'Helvetica', sans-serif;color:#666666;"> </span><span style="font-family:'ArialMT', 'Arial', sans-serif;font-size:14px;">指数：</span></p>
+        <select id="u1029_input" class="u1029_input">
+          <option class="u1029_input_option" value="香菇">香菇</option>
+        </select>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1030" class="ax_default label">
+        <div id="u1030_div" class=""></div>
+        <div id="u1030_text" class="text ">
+          <p style="font-size:13px;"><span style="font-family:'Helvetica';text-decoration:none;color:#FF3B30;">*</span><span style="font-family:'Helvetica';text-decoration:none;color:#666666;"> </span><span style="font-family:'Arial Normal', 'Arial';font-size:14px;text-decoration:none;">指数：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (文本框) -->
-      <div id="u1030" class="ax_default text_field">
-        <div id="u1030_div" class=""></div>
-        <input id="u1030_input" type="text" value="98.73" class="u1030_input"/>
+      <div id="u1031" class="ax_default text_field">
+        <div id="u1031_div" class=""></div>
+        <input id="u1031_input" type="text" value="98.73" class="u1031_input"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1031" class="ax_default label">
-        <div id="u1031_div" class=""></div>
-        <div id="u1031_text" class="text ">
-          <p><span>删除</span></p>
+      <div id="u1032" class="ax_default label">
+        <div id="u1032_div" class=""></div>
+        <div id="u1032_text" class="text ">
+          <p><span style="text-decoration:none;">删除</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u1032" class="ax_default primary_button">
-        <div id="u1032_div" class=""></div>
-        <div id="u1032_text" class="text ">
-          <p><span>提交</span></p>
+      <div id="u1033" class="ax_default primary_button">
+        <div id="u1033_div" class=""></div>
+        <div id="u1033_text" class="text ">
+          <p><span style="text-decoration:none;">提交</span></p>
         </div>
       </div>
     </div>
