--- a/金融创投.html
+++ b/金融创投.html
@@ -71,7 +71,7 @@
       <div id="u326" class="ax_default _默认样式">
         <div id="u326_div" class=""></div>
         <div id="u326_text" class="text ">
-          <p><a id="u327" class="link"><span style="color:#999999;">首页</span></a><span style="color:#666666;"> &gt; 产品与服务&gt; 金融创投</span></p>
+          <p><a id="u327" class="link"><span style="text-decoration:none;color:#999999;">首页</span></a><span style="text-decoration:none;color:#666666;"> &gt; 产品与服务&gt; 金融创投</span></p>
         </div>
       </div>
 
@@ -79,11 +79,11 @@
       <div id="u328" class="ax_default label">
         <div id="u328_div" class=""></div>
         <div id="u328_text" class="text ">
-          <p><span>为拓宽市场产品品种，食用菌公司拟以投资参股的商业方式，扶持多家种植企业、加工企业、仓储企业、物流企业进入食用菌交易市场。为掌握稳定优质货源、对接销路。</span></p><p><span><br></span></p>
+          <p><span style="text-decoration:none;">为拓宽市场产品品种，食用菌公司拟以投资参股的商业方式，扶持多家种植企业、加工企业、仓储企业、物流企业进入食用菌交易市场。为掌握稳定优质货源、对接销路。</span></p><p><span style="text-decoration:none;"><br></span></p>
         </div>
       </div>
 
-      <!-- Unnamed (组合) -->
+      <!-- Unnamed (组 合) -->
       <div id="u329" class="ax_default" data-left="0" data-top="0" data-width="0" data-height="0">
 
         <!-- 顶部导航 (动态面板) -->
@@ -99,7 +99,7 @@
                 </div>
               </div>
 
-              <!-- Unnamed (图片 ) -->
+              <!-- Unnamed (图片) -->
               <div id="u332" class="ax_default _图片_">
                 <img id="u332_img" class="img " src="images/首页/u11.png"/>
                 <div id="u332_text" class="text " style="display:none; visibility: hidden">
@@ -111,7 +111,7 @@
               <div id="u333" class="ax_default _默认样式">
                 <div id="u333_div" class=""></div>
                 <div id="u333_text" class="text ">
-                  <p style="font-size:16px;"><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC', sans-serif;font-weight:650;">河南财和食用菌交易市场有限公司</span></p><p style="font-size:14px;"><span style="font-family:'ArialMT', 'Arial', sans-serif;font-weight:400;">Henan Caihe edible fungus trading market Co., Ltd</span></p>
+                  <p style="font-size:16px;"><span style="font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC';font-weight:650;text-decoration:none;">河南财和食用菌交易市场有限公司</span></p><p style="font-size:14px;"><span style="font-family:'Arial Normal', 'Arial';font-weight:400;text-decoration:none;">Henan Caihe edible fungus trading market Co., Ltd</span></p>
                 </div>
               </div>
 
@@ -119,7 +119,7 @@
               <div id="u334" class="ax_default _默认样式" data-label="首页" selectiongroup="菜单1">
                 <div id="u334_div" class=""></div>
                 <div id="u334_text" class="text ">
-                  <p><span>首页</span></p>
+                  <p><span style="text-decoration:none;">首页</span></p>
                 </div>
               </div>
 
@@ -127,7 +127,7 @@
               <div id="u335" class="ax_default _默认样式" data-label="产品与服务" selectiongroup="菜单1">
                 <div id="u335_div" class=""></div>
                 <div id="u335_text" class="text ">
-                  <p><span>产品与服务</span></p>
+                  <p><span style="text-decoration:none;">产品与服务</span></p>
                 </div>
               </div>
 
@@ -135,7 +135,7 @@
               <div id="u336" class="ax_default _默认样式" data-label="关于我们" selectiongroup="菜单1">
                 <div id="u336_div" class=""></div>
                 <div id="u336_text" class="text ">
-                  <p><span>新闻中心</span></p>
+                  <p><span style="text-decoration:none;">新闻中心</span></p>
                 </div>
               </div>
 
@@ -143,7 +143,7 @@
               <div id="u337" class="ax_default _默认样式" data-label="企业理念" selectiongroup="菜单1">
                 <div id="u337_div" class=""></div>
                 <div id="u337_text" class="text ">
-                  <p><span>关于财和</span></p>
+                  <p><span style="text-decoration:none;">关于财和</span></p>
                 </div>
               </div>
 
@@ -151,7 +151,7 @@
               <div id="u338" class="ax_default _默认样式" data-label="产品与服务" selectiongroup="菜单1">
                 <div id="u338_div" class=""></div>
                 <div id="u338_text" class="text ">
-                  <p><span>行情数据</span></p>
+                  <p><span style="text-decoration:none;">行情数据</span></p>
                 </div>
               </div>
 
@@ -159,11 +159,11 @@
               <div id="u339" class="ax_default _默认样式" data-label="产品与服务" selectiongroup="菜单1">
                 <div id="u339_div" class=""></div>
                 <div id="u339_text" class="text ">
-                  <p><span>成为合作伙伴</span></p>
+                  <p><span style="text-decoration:none;">成为合作伙伴</span></p>
                 </div>
               </div>
 
-              <!-- Unnamed (下拉列表) -->
+              <!-- Unnamed (下拉列表框) -->
               <div id="u340" class="ax_default droplist">
                 <div id="u340_div" class=""></div>
                 <select id="u340_input" class="u340_input">
@@ -190,11 +190,11 @@
               <div id="u342" class="ax_default _默认样式">
                 <div id="u342_div" class=""></div>
                 <div id="u342_text" class="text ">
-                  <p style="font-size:16px;"><span style="font-family:'微软雅黑 Bold', '微软雅黑', sans-serif;font-weight:700;">企业网站模板</span></p><p style="font-size:14px;"><span style="font-family:'ArialMT', 'Arial', sans-serif;font-weight:400;">Company Name</span></p>
+                  <p style="font-size:16px;"><span style="font-family:'微软雅黑 Bold', '微软雅黑';font-weight:700;text-decoration:none;">企业网站模板</span></p><p style="font-size:14px;"><span style="font-family:'Arial Normal', 'Arial';font-weight:400;text-decoration:none;">Company Name</span></p>
                 </div>
               </div>
 
-              <!-- Unnamed (图片 ) -->
+              <!-- Unnamed (图片) -->
               <div id="u343" class="ax_default _图片_">
                 <img id="u343_img" class="img " src="images/首页/u11.png"/>
                 <div id="u343_text" class="text " style="display:none; visibility: hidden">
@@ -206,7 +206,7 @@
               <div id="u344" class="ax_default _默认样式" data-label="首页" selectiongroup="菜单2">
                 <div id="u344_div" class=""></div>
                 <div id="u344_text" class="text ">
-                  <p><span>首页</span></p>
+                  <p><span style="text-decoration:none;">首页</span></p>
                 </div>
               </div>
 
@@ -214,7 +214,7 @@
               <div id="u345" class="ax_default _默认样式" data-label="产品与服务" selectiongroup="菜单2">
                 <div id="u345_div" class=""></div>
                 <div id="u345_text" class="text ">
-                  <p><span>产品与服务</span></p>
+                  <p><span style="text-decoration:none;">产品与服务</span></p>
                 </div>
               </div>
 
@@ -222,7 +222,7 @@
               <div id="u346" class="ax_default _默认样式" data-label="关于我们" selectiongroup="菜单2">
                 <div id="u346_div" class=""></div>
                 <div id="u346_text" class="text ">
-                  <p><span>关于我们</span></p>
+                  <p><span style="text-decoration:none;">关于我们</span></p>
                 </div>
               </div>
 
@@ -230,7 +230,7 @@
               <div id="u347" class="ax_default _默认样式" data-label="企业理念" selectiongroup="菜单2">
                 <div id="u347_div" class=""></div>
                 <div id="u347_text" class="text ">
-                  <p><span>企业理念</span></p>
+                  <p><span style="text-decoration:none;">企业理念</span></p>
                 </div>
               </div>
 
@@ -238,7 +238,7 @@
               <div id="u348" class="ax_default _默认样式" data-label="精英团队" selectiongroup="菜单2">
                 <div id="u348_div" class=""></div>
                 <div id="u348_text" class="text ">
-                  <p><span>精英团队</span></p>
+                  <p><span style="text-decoration:none;">精英团队</span></p>
                 </div>
               </div>
 
@@ -246,7 +246,7 @@
               <div id="u349" class="ax_default _默认样式" data-label="宣传视频" selectiongroup="菜单2">
                 <div id="u349_div" class=""></div>
                 <div id="u349_text" class="text ">
-                  <p><span>宣传视频</span></p>
+                  <p><span style="text-decoration:none;">宣传视频</span></p>
                 </div>
               </div>
 
@@ -254,7 +254,7 @@
               <div id="u350" class="ax_default _默认样式" data-label="新闻动态" selectiongroup="菜单2">
                 <div id="u350_div" class=""></div>
                 <div id="u350_text" class="text ">
-                  <p><span>新闻动态</span></p>
+                  <p><span style="text-decoration:none;">新闻动态</span></p>
                 </div>
               </div>
 
@@ -262,7 +262,7 @@
               <div id="u351" class="ax_default _默认样式" data-label="成为合作伙伴" selectiongroup="菜单2">
                 <div id="u351_div" class=""></div>
                 <div id="u351_text" class="text ">
-                  <p><span>成为合作伙伴</span></p>
+                  <p><span style="text-decoration:none;">成为合作伙伴</span></p>
                 </div>
               </div>
 
@@ -270,7 +270,7 @@
               <div id="u352" class="ax_default _默认样式">
                 <div id="u352_div" class=""></div>
                 <div id="u352_text" class="text ">
-                  <p style="font-size:12px;"><span style="font-family:'微软雅黑', sans-serif;">服务热线（仅收市话费）</span></p><p style="font-size:20px;"><span style="font-family:'ArialMT', 'Arial', sans-serif;">400-0000-000</span></p>
+                  <p style="font-size:12px;"><span style="font-family:'微软雅黑';text-decoration:none;">服务热线（仅收市话费）</span></p><p style="font-size:20px;"><span style="font-family:'Arial Normal', 'Arial';text-decoration:none;">400-0000-000</span></p>
                 </div>
               </div>
 
@@ -278,7 +278,7 @@
               <div id="u353" class="ax_default _默认样式">
                 <div id="u353_div" class=""></div>
                 <div id="u353_text" class="text ">
-                  <p><span style="font-family:'FontAwesome', sans-serif;font-weight:400;"></span><span style="font-family:'微软雅黑', sans-serif;font-weight:400;"> </span></p>
+                  <p><span style="font-family:'FontAwesome';font-weight:400;text-decoration:none;"></span><span style="font-family:'微软雅黑';font-weight:400;text-decoration:none;"> </span></p>
                 </div>
               </div>
             </div>
@@ -290,7 +290,7 @@
       <div id="u354" class="ax_default label">
         <div id="u354_div" class=""></div>
         <div id="u354_text" class="text ">
-          <p><span>企业扶持</span></p>
+          <p><span style="text-decoration:none;">企业扶持</span></p>
         </div>
       </div>
 
@@ -314,7 +314,7 @@
       <div id="u357" class="ax_default label">
         <div id="u357_div" class=""></div>
         <div id="u357_text" class="text ">
-          <p><span>电商物联</span></p>
+          <p><span style="text-decoration:none;">电商物联</span></p>
         </div>
       </div>
 
@@ -322,7 +322,7 @@
       <div id="u358" class="ax_default label">
         <div id="u358_div" class=""></div>
         <div id="u358_text" class="text ">
-          <p><span>供应链金融</span></p>
+          <p><span style="text-decoration:none;">供应链金融</span></p>
         </div>
       </div>
 
@@ -338,7 +338,7 @@
       <div id="u360" class="ax_default label">
         <div id="u360_div" class=""></div>
         <div id="u360_text" class="text ">
-          <p><span>前期参股、收购和建设总投资约为3.5亿元，初步建立“企业扶持+电商物联+供应链金融”体系，激发市场活力，建立现代物流体系，降低流通成本，服务实体产业，振兴农业经济。</span></p>
+          <p><span style="text-decoration:none;">前期参股、收购和建设总投资约为3.5亿元，初步建立“企业扶持+电商物联+供应链金融”体系，激发市场活力，建立现代物流体系，降低流通成本，服务实体产业，振兴农业经济。</span></p>
         </div>
       </div>
 
@@ -354,7 +354,7 @@
       <div id="u362" class="ax_default primary_button">
         <div id="u362_div" class=""></div>
         <div id="u362_text" class="text ">
-          <p><span>立即前往</span></p>
+          <p><span style="text-decoration:none;">立即前往</span></p>
         </div>
       </div>
 
@@ -362,11 +362,11 @@
       <div id="u363" class="ax_default _三级标题">
         <div id="u363_div" class=""></div>
         <div id="u363_text" class="text ">
-          <p><span>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span></p>
+          <p><span style="text-decoration:none;">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (组合) -->
+      <!-- Unnamed (组 合) -->
       <div id="u364" class="ax_default" data-left="0" data-top="919" data-width="1300" data-height="476">
 
         <!-- Unnamed (底部) -->
@@ -394,7 +394,7 @@
         <div id="u369" class="ax_default _默认样式">
           <div id="u369_div" class=""></div>
           <div id="u369_text" class="text ">
-            <p><span style="font-family:'Helvetica', sans-serif;">Copyright ©</span><a id="u370" class="link"><span style="font-family:'Helvetica', sans-serif;"> 2021 - 2022 Henan Caihe edible fungus trading market Co., Ltd</span></a><span style="font-family:'Helvetica', sans-serif;">&nbsp; </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;">豫公网安备:31012002003237 网站备案号：豫ICP备11023454号-1&nbsp; </span></p>
+            <p><span style="font-family:'Helvetica';text-decoration:none;">Copyright ©</span><a id="u370" class="link"><span style="font-family:'Helvetica';text-decoration:none;"> 2021 - 2022 Henan Caihe edible fungus trading market Co., Ltd</span></a><span style="font-family:'Helvetica';text-decoration:none;">&nbsp; </span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';text-decoration:none;">豫公网安备:31012002003237 网站备案号：豫ICP备11023454号-1&nbsp; </span></p>
           </div>
         </div>
         <div id="u367" style="display:none; visibility:hidden;"></div>
@@ -403,21 +403,21 @@
         <div id="u371" class="ax_default _默认样式">
           <div id="u371_div" class=""></div>
           <div id="u371_text" class="text ">
-            <p><span>河南财和</span></p>
+            <p><span style="text-decoration:none;">河南财和</span></p>
           </div>
         </div>
 
-        <!-- Unnamed (组合) -->
+        <!-- Unnamed (组 合) -->
         <div id="u372" class="ax_default" data-left="428" data-top="1024" data-width="812" data-height="206">
 
-          <!-- Unnamed (组合) -->
+          <!-- Unnamed (组 合) -->
           <div id="u373" class="ax_default" data-left="998" data-top="1024" data-width="242" data-height="152">
 
             <!-- Unnamed (矩形) -->
             <div id="u374" class="ax_default _默认样式">
               <div id="u374_div" class=""></div>
               <div id="u374_text" class="text ">
-                <p><span>联系我们</span></p>
+                <p><span style="text-decoration:none;">联系我们</span></p>
               </div>
             </div>
 
@@ -425,7 +425,7 @@
             <div id="u375" class="ax_default _默认样式">
               <div id="u375_div" class=""></div>
               <div id="u375_text" class="text ">
-                <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;">电话：400-6977000</span></p><p><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;">地址：河南省郑州市管城回族区升龙广场</span><span style="font-family:'Helvetica', sans-serif;">1</span><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;">号楼</span><span style="font-family:'Helvetica', sans-serif;">A</span><span style="font-family:'PingFangSC-Regular', 'PingFang SC', sans-serif;">座</span></p>
+                <p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';text-decoration:none;">电话：400-6977000</span></p><p><span style="font-family:'PingFangSC-Regular', 'PingFang SC';text-decoration:none;">地址：河南省郑州市管城回族区升龙广场</span><span style="font-family:'Helvetica';text-decoration:none;">1</span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';text-decoration:none;">号楼</span><span style="font-family:'Helvetica';text-decoration:none;">A</span><span style="font-family:'PingFangSC-Regular', 'PingFang SC';text-decoration:none;">座</span></p>
               </div>
             </div>
           </div>
@@ -434,7 +434,7 @@
           <div id="u376" class="ax_default _默认样式">
             <div id="u376_div" class=""></div>
             <div id="u376_text" class="text ">
-              <p><span>财和业务</span></p>
+              <p><span style="text-decoration:none;">财和业务</span></p>
             </div>
           </div>
 
@@ -442,7 +442,7 @@
           <div id="u377" class="ax_default _默认样式">
             <div id="u377_div" class=""></div>
             <div id="u377_text" class="text ">
-              <p><span>食用菌交易市场</span></p><p><span>金融创投</span></p><p><span>食用菌加工及深加工品牌打造</span></p><p><span>仓储</span></p><p><span>物流</span></p>
+              <p><span style="text-decoration:none;">食用菌交易市场</span></p><p><span style="text-decoration:none;">金融创投</span></p><p><span style="text-decoration:none;">食用菌加工及深加工品牌打造</span></p><p><span style="text-decoration:none;">仓储</span></p><p><span style="text-decoration:none;">物流</span></p>
             </div>
           </div>
 
@@ -450,7 +450,7 @@
           <div id="u378" class="ax_default _默认样式">
             <div id="u378_div" class=""></div>
             <div id="u378_text" class="text ">
-              <p><span>战略合作伙伴</span></p>
+              <p><span style="text-decoration:none;">战略合作伙伴</span></p>
             </div>
           </div>
 
@@ -458,12 +458,12 @@
           <div id="u379" class="ax_default _默认样式">
             <div id="u379_div" class=""></div>
             <div id="u379_text" class="text ">
-              <p><span>西峡县人民政府</span></p><p><span>南阳财和投资有限公司</span></p><p><span>中国建设银行</span></p><p><span>中国优质农产品开发服务协会</span></p><p><span>西峡县财政局</span></p>
+              <p><span style="text-decoration:none;">西峡县人民政府</span></p><p><span style="text-decoration:none;">南阳财和投资有限公司</span></p><p><span style="text-decoration:none;">中国建设银行</span></p><p><span style="text-decoration:none;">中国优质农产品开发服务协会</span></p><p><span style="text-decoration:none;">西峡县财政局</span></p>
             </div>
           </div>
         </div>
 
-        <!-- Unnamed (图片 ) -->
+        <!-- Unnamed (图片) -->
         <div id="u380" class="ax_default image">
           <img id="u380_img" class="img " src="images/首页/u54.jpg"/>
           <div id="u380_text" class="text " style="display:none; visibility: hidden">
@@ -475,7 +475,7 @@
         <div id="u381" class="ax_default label">
           <div id="u381_div" class=""></div>
           <div id="u381_text" class="text ">
-            <p><span>关注公众号</span></p>
+            <p><span style="text-decoration:none;">关注公众号</span></p>
           </div>
         </div>
       </div>
