--- a/食用菌加工及深加工品牌打造.html
+++ b/食用菌加工及深加工品牌打造.html
@@ -378,7 +378,7 @@
       <div id="u424" class="ax_default _三级标题">
         <div id="u424_div" class=""></div>
         <div id="u424_text" class="text ">
-          <p><span style="text-decoration:none;">产品展示</span></p>
+          <p><span style="text-decoration:none;">特色工艺</span></p>
         </div>
       </div>
 
@@ -633,6 +633,14 @@
         <div id="u460_div" class=""></div>
         <div id="u460_text" class="text ">
           <p><span style="text-decoration:none;">原料工艺：</span></p><p><span style="text-decoration:none;"><br></span></p><p><span style="text-decoration:none;">【当香菇粗加工与现代科技的结合】</span></p><p><span style="text-decoration:none;">无需人工触摸香菇，干净卫生。</span></p><p><span style="text-decoration:none;">设备与香菇接触部分全部采用食品级材质，304不锈钢、PU材质输送带。</span></p><p><span style="text-decoration:none;">通过相机识别，吹气分拣，自动分类。</span></p><p><span style="text-decoration:none;">高精度、高效率、高质量。</span></p><p><span style="text-decoration:none;"><br></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u461" class="ax_default _三级标题">
+        <div id="u461_div" class=""></div>
+        <div id="u461_text" class="text ">
+          <p><span style="text-decoration:none;">产品展示</span></p>
         </div>
       </div>
     </div>
