--- a/物流.html
+++ b/物流.html
@@ -412,7 +412,7 @@
       <div id="u1242" class="ax_default label">
         <div id="u1242_div" class=""></div>
         <div id="u1242_text" class="text ">
-          <p><span>专注打造服务于产业端的智能物流平台，持续帮助企业供应链降本增效。</span></p>
+          <p><span>专注打造服务于产业端的智能物流平台，持续帮助企业供应链降本增效。</span></p><p><span>利用移动互联网、大数据、人工智能等新技术，打造智慧物流生态平台，提升物流行业的智能化和标准化。</span></p>
         </div>
       </div>
     </div>
