--- a/首页.html
+++ b/首页.html
@@ -339,7 +339,7 @@
       <div id="u36" class="ax_default _默认样式">
         <div id="u36_div" class=""></div>
         <div id="u36_text" class="text ">
-          <p><span>河南财和食用菌交易市场有限公司(以下简称食用菌公司)，是以河南省西峡县农业综合投资公司出资2亿元设立的全资运营公司。为承建与运营农业部参与的省部共建国家级食用菌交易市场(以下简称食用菌市场)而打造的平台。为提升交易市场的信息互通效率与人才经验交流，在郑州设立运营中心，承接优秀人才进行公司商业化经营</span></p>
+          <p><span>河南财和食用菌交易市场有限公司(以下简称食用菌公司)，是以河南省西峡县农业综合投资公司出资2亿元设立的全资运营公司。为承建与运营农业部参与的省部共建国家级食用菌交易市场(以下简称食用菌市场)而打造的平台。</span></p>
         </div>
       </div>
 
