--- a/首页02.html
+++ b/首页02.html
@@ -1354,7 +1354,7 @@
 
       <!-- Unnamed (图片 ) -->
       <div id="u1849" class="ax_default image">
-        <img id="u1849_img" class="img " src="images/首页02/u1849.png"/>
+        <img id="u1849_img" class="img " src="images/首页/u186.png"/>
         <div id="u1849_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
