--- a/食用菌加工及深加工品牌打造.html
+++ b/食用菌加工及深加工品牌打造.html
@@ -568,7 +568,7 @@
       <div id="u446" class="ax_default label">
         <div id="u446_div" class=""></div>
         <div id="u446_text" class="text ">
-          <p><span>无人工触摸，干净卫生</span></p><p><span>设备与香菇接触部分全部采用食品级材质，304不锈钢、PU材质输送带</span></p><p><span>通过相机识别—&gt;吹气分拣——&gt;自动分类</span></p><p><span><br></span></p>
+          <p><span>无人工触摸，干净卫生，设备与香菇接触部分全部采用食品级材质，304不锈钢、PU材质输送带，</span></p><p><span>通过相机识别 、 吹气分拣&nbsp;&nbsp; 、自动分类。</span></p><p><span><br></span></p>
         </div>
       </div>
 
