--- a/首页2.html
+++ b/首页2.html
@@ -122,7 +122,7 @@
           <div id="u1635" class="ax_default _默认样式">
             <div id="u1635_div" class=""></div>
             <div id="u1635_text" class="text ">
-              <p style="font-size:20px;"><span style="color:#666666;">战略合作伙伴</span></p><p style="font-size:16px;"><span style="color:#999999;">携手政府，开放财和“标准化+科技+服务”核心能力，共享数字经济的无限价值</span></p>
+              <p style="font-size:20px;"><span style="color:#666666;">战略合作伙伴</span></p><p style="font-size:16px;"><span style="color:#999999;">携手政府，开放“标准化+科技+服务”核心能力，共享数字经济的无限价值</span></p>
             </div>
           </div>
 
