--- a/首页.html
+++ b/首页.html
@@ -1331,7 +1331,7 @@
       <div id="u317" class="ax_default sticky_1">
         <div id="u317_div" class=""></div>
         <div id="u317_text" class="text ">
-          <p><span>行情</span></p><p><span>（1）下拉列表，展示食用菌品名，后台字典项添加，默认选择香菇。</span></p><p><span>（2）价格指数规则修改：放弃后台价格指数录入上传</span></p><p><span>新规则：选择两日参考价最高价展示</span></p><p><span><br></span></p><p><span>（3）参考价上传的是最新一天的数据，显示5条数据，超过5条分页显示。</span></p><p><span><br></span></p>
+          <p><span>行情</span></p><p><span>（1）下拉列表，展示食用菌品名，后台字典项添加，默认选择香菇。</span></p><p><span>（2）价格指数规则修改：放弃后台价格指数录入上传</span></p><p><span>新规则：选择两日鲜菇参考价最高价展示（待定）</span></p><p><span><br></span></p><p><span>（3）参考价上传的是最新一天的数据，显示5条数据，超过5条分页显示。</span></p><p><span><br></span></p>
         </div>
       </div>
 
